--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,4 +1,3 @@
-<!-- DO NOT MODIFY THIS FILE -->
 <!doctype html>
 <html lang="en">
 
@@ -22,11 +21,19 @@
             padding: 8px;
             width: 100%;
         }
+        .error {
+            color: red;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
+
 <body>
     <h1>WELCOME</h1>
     <div class="form-container">
+        <% if (error) { %>
+            <div class="error"><%= error %></div>
+        <% } %>
         <% if (!isSignup) { %>
             <h2>Login</h2>
             <form action="/login" method="POST">
@@ -47,4 +54,5 @@
         <% } %>
     </div>
 </body>
+
 </html>
