--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <h1>WELCOME</h1>
+    <h1>WELCOME TO UMD CREDIT UNION</h1>
     <div class="form-container">
         <% if (error) { %>
             <div class="error"><%= error %></div>
