--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bank App</title>
+    <title>UMD Credit Union</title>
     <style>
         body {
             font-family: Arial, sans-serif;
