--- a/templates/profile.ejs
+++ b/templates/profile.ejs
@@ -18,9 +18,9 @@
         <h1>Profile</h1>
         <!-- Uses robohash API to generate a unique profile picture for each user -->
         <img src="https://robohash.org/<%= user.email %>" alt="Profile Picture" style="width: 150px; height: 150px; border-radius: 50%;">
-        <p>Name: <%= user.name %></p>
-        <p>Email: <%= user.email %></p>
-        <p>Balance: <%= user.balance %></p>
+        <p><strong>Name:</strong> <%= user.name %></p>
+        <p><strong>Email:</strong> <%= user.email %></p>
+        <p><strong>Balance:</strong> <%= user.balance %></p>
 
         <hr>
         <hr>
