--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr.Roboto Credit Union</title>
+    <title>Mr.Roboto's Credit Union</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -84,7 +84,7 @@
 
 <body>
     <div class="form-container">
-        <h1>Welcome to Mr.Roboto Credit Union</h1>
+        <h1>Welcome to Mr.Roboto's Credit Union</h1>
         <img src="https://robohash.org/Mr.Roboto" alt="Mr.Roboto" class="circle-image">
         <% if (error) { %>
             <div class="error"><%= error %></div>
