--- a/templates/profile.ejs
+++ b/templates/profile.ejs
@@ -179,6 +179,14 @@
             <label for="recipientEmail">Recipient's Email:</label>
             <input type="email" name="recipientEmail" required>
             <label for="amount">Amount to Transfer:</label>
+
+             <!-- transfer error message -->
+            <% if (error2) { %>
+                <div class="error-message">
+                    <p><%= error2 %></p>
+                </div>
+            <% } %>
+
             <input type="number" name="amount" min="0.01" step="0.01" required>
             <button type="submit">Transfer</button>
         </form>
